@@ -19,7 +19,9 @@
    * Fixed issue regarding "Fix dialogs on one line" - thx ingo
    * Fixed possible crash in EBU STL - thx Elena
    * Video player "Stop" resets playback position - thx askolesov/pavel-belenko
-   * Many fixes for Timed Text 1.0 and Netflix Timed Text - thx askolesov/pavel-belenko
+   * Many fixes for TTML 1.0 and Netflix Timed Text - thx askolesov/pavel-belenko
+   * Fixed locking of input subtitle (for unknown subtitles) - thx darnn
+   * Fixed crash after unsuccessful load of file - thx darnn
 
 
 3.5.2 (3rd March 2017)
